@@ -1,6 +1,6 @@
 //////////////////////////////////////////////////////////////////////////
 //
-//  Copyright (c) 2007-2010, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2007-2012, Image Engine Design Inc. All rights reserved.
 //
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -76,6 +76,7 @@ void bindSearchPath()
 {
 	class_<SearchPath>( "SearchPath" )
 		.def( init<string, string>() )
+		.def( init<const SearchPath &>() )
 		.def( "find", &find )
 		.def( "setPaths", &SearchPath::setPaths )
 		.def( "getPaths", &SearchPath::getPaths )
